tests/ui/missing-supertrait.stderr
error[E0277]: the trait bound `dyn MyTrait: Clone` is not satisfied
   --> tests/ui/missing-supertrait.rs:3:1
    |
3   | dyn_clone::clone_trait_object!(MyTrait);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `dyn MyTrait`
    |
    = help: the following other types implement trait `DynClone`:
              [T]
              str
    = note: required for `dyn MyTrait` to implement `DynClone`
note: required by a bound in `clone_box`
   --> src/lib.rs
    |
    |     T: ?Sized + DynClone,
    |                 ^^^^^^^^ required by this bound in `clone_box`
    = note: this error originates in the macro `$crate::__internal_clone_trait_object` which comes from the expansion of the macro `dyn_clone::clone_trait_object` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `dyn MyTrait + Send: Clone` is not satisfied
   --> tests/ui/missing-supertrait.rs:3:1
    |
3   | dyn_clone::clone_trait_object!(MyTrait);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `dyn MyTrait + Send`
    |
    = help: the following other types implement trait `DynClone`:
              [T]
              str
    = note: required for `dyn MyTrait + Send` to implement `DynClone`
note: required by a bound in `clone_box`
   --> src/lib.rs
    |
    |     T: ?Sized + DynClone,
    |                 ^^^^^^^^ required by this bound in `clone_box`
    = note: this error originates in the macro `$crate::__internal_clone_trait_object` which comes from the expansion of the macro `dyn_clone::clone_trait_object` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `dyn MyTrait + Sync: Clone` is not satisfied
   --> tests/ui/missing-supertrait.rs:3:1
    |
3   | dyn_clone::clone_trait_object!(MyTrait);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `dyn MyTrait + Sync`
    |
    = help: the following other types implement trait `DynClone`:
              [T]
              str
    = note: required for `dyn MyTrait + Sync` to implement `DynClone`
note: required by a bound in `clone_box`
   --> src/lib.rs
    |
    |     T: ?Sized + DynClone,
    |                 ^^^^^^^^ required by this bound in `clone_box`
    = note: this error originates in the macro `$crate::__internal_clone_trait_object` which comes from the expansion of the macro `dyn_clone::clone_trait_object` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `dyn MyTrait + Send + Sync: Clone` is not satisfied
   --> tests/ui/missing-supertrait.rs:3:1
    |
3   | dyn_clone::clone_trait_object!(MyTrait);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `dyn MyTrait + Send + Sync`
    |
    = help: the following other types implement trait `DynClone`:
              [T]
              str
    = note: required for `dyn MyTrait + Send + Sync` to implement `DynClone`
note: required by a bound in `clone_box`
   --> src/lib.rs
    |
    |     T: ?Sized + DynClone,
    |                 ^^^^^^^^ required by this bound in `clone_box`
    = note: this error originates in the macro `$crate::__internal_clone_trait_object` which comes from the expansion of the macro `dyn_clone::clone_trait_object` (in Nightly builds, run with -Z macro-backtrace for more info)
